--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.0",
+        "react-validation": "^3.0.7",
         "rxjs": "^6.3.3",
+        "validator": "^13.5.2",
         "yup": "^0.27.0"
     },
     "devDependencies": {
